Actualizar html, css y clases