@@ -1,7 +1,6 @@
 package ar.edu.unju.fi.lists;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -12,7 +11,7 @@ public class ProductList {
 	
 	// region Attributes
 	private List<Product> productos; // Container
-	private List<String> categorias = Arrays.asList(
+	private List<String> categorias = List.of(
 		"Alimentos",
 		"Camas",
 		"Collares y correas",
@@ -27,12 +26,12 @@ public class ProductList {
 
 		this.productos.add(new Product("Alimento pedigree", categorias.get(0), "/images/products/foods/alimento_pedigree.jpg"));
 		this.productos.add(new Product("Alimento bonelo", categorias.get(0), "/images/products/foods/alimento_bonelo.png"));
-		this.productos.add(new Product("Alimento dog_chow", categorias.get(0), "/images/products/foods/alimento_dog_chow.jpg"));
+		this.productos.add(new Product("Alimento dog chow", categorias.get(0), "/images/products/foods/alimento_dog_chow.jpg"));
 		this.productos.add(new Product("Alimento dogui", categorias.get(0), "/images/products/foods/alimento_dogui.jpg"));
 		this.productos.add(new Product("Alimento agility", categorias.get(0), "/images/products/foods/alimento_agility.jpg"));
 		this.productos.add(new Product("Alimento raza", categorias.get(0), "/images/products/foods/alimento_raza.jpg"));
 		this.productos.add(new Product("Alimento siete vidas", categorias.get(0), "/images/products/foods/alimento_siete_vidas.jpg"));
-		this.productos.add(new Product("Alimento gati", categorias.get(0), "/images/products/foods/alimento_gati.jpg"));
+		this.productos.add(new Product("Alimento gati", categorias.get(0), "/images/products/foods/alimento_gati.jpg"));		
 
 		this.productos.add(new Product("Cama colchon colchoneta", categorias.get(1), "/images/products/beds/cama_colchon_colchoneta.jpg")); 
 		this.productos.add(new Product("Cama moises antidesgarro", categorias.get(1), "/images/products/beds/cama_moises_antidesgarro.jpg"));
@@ -47,7 +46,7 @@ public class ProductList {
 		this.productos.add(new Product("Collares de cuero", categorias.get(2), "/images/products/leashes_and_collars/collares_de_cuero.jpg"));
 		this.productos.add(new Product("Correa alpina", categorias.get(2), "/images/products/leashes_and_collars/correa_alpina.jpg"));
 		this.productos.add(new Product("Correa extendible", categorias.get(2), "/images/products/leashes_and_collars/correa_extendible.jpg"));
-		this.productos.add(new Product("Correa extendible flexi", categorias.get(2), "/images/products/leashes_and_collars/correa_extendible_flexi.jpg"));
+		this.productos.add(new Product("Correa extendible flexible", categorias.get(2), "/images/products/leashes_and_collars/correa_extendible_flexi.jpg"));
 		this.productos.add(new Product("Correas estampadas", categorias.get(2), "/images/products/leashes_and_collars/correas_estampadas.jpg"));
 		
 		this.productos.add(new Product("Cepillo para gato", categorias.get(3), "/images/products/hygiene/cepillo_para_gatos.jpg"));
@@ -76,15 +75,18 @@ public class ProductList {
 	public void setProductos(List<Product> productos) {
 		this.productos = productos;
 	}
-	// endregion
 
 	// region Method
 	public Set<String> getCategorias() {
-		List<String> listaCategorias = new ArrayList<String>();
-			for(Product producto: productos) {
-				listaCategorias.add(producto.getCategoria());
-			}
-		Set<String> setCategorias = new HashSet<>(listaCategorias);
+
+		List<String> noDuplicatesList = new ArrayList<String>();
+
+		for(Product producto: productos) {
+				noDuplicatesList.add(producto.getCategoria());
+		}
+
+		Set<String> setCategorias = new HashSet<>(noDuplicatesList);
+
 		return setCategorias;
 	}
 	// endregion
